# tx_epdiy

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_cn.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  epdiy_main.c  idf_component.yml
partitions/: esp32s3_n16r8.csv
